scripts/nullaway/original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8.txt
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:118: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            throw new UnableToPlacePieceException("The next piece "+currentPiece+" could not be placed on the board. This means GAME OVER.",null);
                                                                                                                                            ^
    (see http://t.uber.com/nullaway )
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:14: error: [NullAway] initializer method does not guarantee @NonNull field name (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public HighScorePost(){}
           ^
    (see http://t.uber.com/nullaway )
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:32: error: [NullAway] @NonNull static field name not initialized
    static String name, outputfile = "highscore.dat";
                  ^
    (see http://t.uber.com/nullaway )
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:76: error: [NullAway] initializer method does not guarantee @NonNull fields exitCmd (line 36), newGameCmd (line 36), pauseCmd (line 36), changeLevelCmd (line 36), showHighscoreCmd (line 36), nextLvlCmd (line 36), prevLvlCmd (line 36) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TetrisGameSwing(){
           ^
    (see http://t.uber.com/nullaway )
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:19: error: [NullAway] assigning @Nullable expression to @NonNull field
    private Piece destinationPiece = null;
                  ^
    (see http://t.uber.com/nullaway )
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:81: error: [NullAway] assigning @Nullable expression to @NonNull field
        destinationPiece = null;
                         ^
    (see http://t.uber.com/nullaway )
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/ElAshiEvaluatorTest.java:51: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                .bestPlacement(new ElAshiTetrisBoardEvaluator(), boardBefore, piece, null);
                                                                                     ^
    (see http://t.uber.com/nullaway )
7 errors
